# poco-appserver

./: .gitignore  CMakeLists.txt  application_server.cpp  application_server.h  main.cpp
filelink/model/: config.ini  configfile.cpp  configfile.h  file.h
filelink/resources/: download.sh  upload.js
filelink/viewcontroller/: FileLink.cpsp  UploadFile.cpsp
model/: config.ini  configuration.cpp  configuration.h  file.cpp  file.h  modelExample.cpp  modelExample.h
resources/: download.sh  server.sh  uploadfile.js
viewcontroller/: FileLink.cpsp  Index.cpsp  RetrieveFile.cpcp  RetrieveFile.cpsp  TimeHandler.cpsp  UploadFile.cpsp
